force-app/main/default/objects/Package_Line_Item__c/Package_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Package Line Item</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Package Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>