force-app/main/default/objects/Package_Line_Item__c/fields/Event_Package__c.field-meta.xml
<CustomField>
    <fullName>Event_Package__c</fullName>
    <label>Event Package</label>
    <referenceTo>Event_Package__c</referenceTo>
    <relationshipLabel>Package Line Items</relationshipLabel>
    <relationshipName>Package_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>