force-app/main/default/objects/Package_Line_Item__c/fields/Optional_Add_On__c.field-meta.xml
<CustomField>
    <fullName>Optional_Add_On__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether item is an optional add-on</description>
    <label>Optional Add-On</label>
    <type>Checkbox</type>
</CustomField>